crates/analyzer/tests/snapshots/errors__undefined_name.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: cannot find value `y` in this scope
  ┌─ [snippet]:3:16
  │
3 │   let x: u16 = y
  │                ^ undefined

error: cannot find value `y` in this scope
  ┌─ [snippet]:4:16
  │
4 │   let z: u16 = y
  │                ^ undefined


